// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render with 1 breadcrumb item and last is active 1`] = `
<StaticRouter
  context={Object {}}
  location="/"
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Header
      breadcrumbs={
        Array [
          Object {
            "isActive": true,
            "title": "First item",
            "to": "#",
          },
        ]
      }
      title=""
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={
              Array [
                Object {
                  "isActive": true,
                  "title": "First item",
                  "to": "#",
                },
              ]
            }
          >
            <Component>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id={1}
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <Component
                    isActive={true}
                    key="First item"
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        to="#"
                      >
                        <LinkAnchor
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            First item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </Component>
                </ol>
              </nav>
            </Component>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</StaticRouter>
`;

exports[`Header component should render with 2 breadcrumb items and last is active 1`] = `
<StaticRouter
  context={Object {}}
  location="/"
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Header
      breadcrumbs={
        Array [
          Object {
            "isActive": false,
            "title": "First item",
            "to": "#",
          },
          Object {
            "isActive": true,
            "title": "Second item",
            "to": "#",
          },
        ]
      }
      title=""
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={
              Array [
                Object {
                  "isActive": false,
                  "title": "First item",
                  "to": "#",
                },
                Object {
                  "isActive": true,
                  "title": "Second item",
                  "to": "#",
                },
              ]
            }
          >
            <Component>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id={3}
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <Component
                    isActive={false}
                    key="First item"
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        to="#"
                      >
                        <LinkAnchor
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            First item
                          </a>
                        </LinkAnchor>
                      </Link>
                      <span
                        className="pf-c-breadcrumb__item-divider"
                      >
                        <AngleRightIcon
                          color="currentColor"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                              transform=""
                            />
                          </svg>
                        </AngleRightIcon>
                      </span>
                    </li>
                  </Component>
                  <Component
                    isActive={true}
                    key="Second item"
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        to="#"
                      >
                        <LinkAnchor
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            Second item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </Component>
                </ol>
              </nav>
            </Component>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</StaticRouter>
`;

exports[`Header component should render with 3 breadcrumb items and last is active 1`] = `
<StaticRouter
  context={Object {}}
  location="/"
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Header
      breadcrumbs={
        Array [
          Object {
            "isActive": false,
            "title": "First item",
            "to": "#",
          },
          Object {
            "isActive": false,
            "title": "Second item",
            "to": "#",
          },
          Object {
            "isActive": true,
            "title": "Third item",
            "to": "#",
          },
        ]
      }
      showTabs={false}
      title=""
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={
              Array [
                Object {
                  "isActive": false,
                  "title": "First item",
                  "to": "#",
                },
                Object {
                  "isActive": false,
                  "title": "Second item",
                  "to": "#",
                },
                Object {
                  "isActive": true,
                  "title": "Third item",
                  "to": "#",
                },
              ]
            }
          >
            <Component>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id={4}
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <Component
                    isActive={false}
                    key="First item"
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        to="#"
                      >
                        <LinkAnchor
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            First item
                          </a>
                        </LinkAnchor>
                      </Link>
                      <span
                        className="pf-c-breadcrumb__item-divider"
                      >
                        <AngleRightIcon
                          color="currentColor"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                              transform=""
                            />
                          </svg>
                        </AngleRightIcon>
                      </span>
                    </li>
                  </Component>
                  <Component
                    isActive={false}
                    key="Second item"
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        to="#"
                      >
                        <LinkAnchor
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            Second item
                          </a>
                        </LinkAnchor>
                      </Link>
                      <span
                        className="pf-c-breadcrumb__item-divider"
                      >
                        <AngleRightIcon
                          color="currentColor"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 256 512"
                            width="1em"
                          >
                            <path
                              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                              transform=""
                            />
                          </svg>
                        </AngleRightIcon>
                      </span>
                    </li>
                  </Component>
                  <Component
                    isActive={true}
                    key="Third item"
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      <Link
                        to="#"
                      >
                        <LinkAnchor
                          href="/"
                          navigate={[Function]}
                        >
                          <a
                            href="/"
                            onClick={[Function]}
                          >
                            Third item
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </Component>
                </ol>
              </nav>
            </Component>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</StaticRouter>
`;

exports[`Header component should render with empty breadcrumb 1`] = `
<StaticRouter
  context={Object {}}
  location="/"
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Header
      breadcrumbs={Array []}
      title=""
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={Array []}
          >
            <Component>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id={0}
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                />
              </nav>
            </Component>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</StaticRouter>
`;

exports[`Header component should render with header Hello world 1`] = `
<StaticRouter
  context={Object {}}
  location="/"
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Header
      title="Hello world"
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <PageHeaderTitle
            title="Hello world"
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                Hello world
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</StaticRouter>
`;

exports[`Header component should render with header as empty string 1`] = `
<StaticRouter
  context={Object {}}
  location="/"
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Header
      title=""
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <PageHeaderTitle
            title=""
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</StaticRouter>
`;

exports[`Header component should render without to attribute 1`] = `
<StaticRouter
  context={Object {}}
  location="/"
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Header
      breadcrumbs={
        Array [
          Object {
            "isActive": true,
            "title": "First item",
          },
        ]
      }
      title=""
    >
      <PageHeader>
        <section
          className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
          widget-type="InsightsPageHeader"
        >
          <HeaderBreadcrumbs
            items={
              Array [
                Object {
                  "isActive": true,
                  "title": "First item",
                },
              ]
            }
          >
            <Component>
              <nav
                aria-label="Breadcrumb"
                className="pf-c-breadcrumb"
                data-ouia-component-id={2}
                data-ouia-component-type="PF4/Breadcrumb"
                data-ouia-safe={true}
              >
                <ol
                  className="pf-c-breadcrumb__list"
                >
                  <Component
                    isActive={true}
                    key="First item"
                  >
                    <li
                      className="pf-c-breadcrumb__item"
                    >
                      First item
                    </li>
                  </Component>
                </ol>
              </nav>
            </Component>
          </HeaderBreadcrumbs>
          <PageHeaderTitle
            title=""
          >
            <Component
              className=""
              headingLevel="h1"
              size="2xl"
              widget-type="InsightsPageHeaderTitle"
            >
              <h1
                className="pf-c-title pf-m-2xl"
                widget-type="InsightsPageHeaderTitle"
              >
                 
                 
              </h1>
            </Component>
          </PageHeaderTitle>
        </section>
      </PageHeader>
    </Header>
  </Router>
</StaticRouter>
`;
